<resources>
    <string name="app_name">App-NoteToSelf</string>

    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_checkbox">Idea</string>
    <string name="toDo_checkbox">To do</string>
    <string name="important_checkbox">Important</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>

    <string name="sound_checkbox">On or Off</string>
    <string name="settings_title">Settings</string>
    <string name="sound_title">Sound</string>
    <string name="anims_title">Animation Speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>

</resources>
