<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ivancrnogorac.app_notetoself.SettingsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/sound_checkbox"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/checkBoxSound"
        android:layout_marginTop="41dp"
        android:text="@string/anims_title" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3">

        <RadioButton
            android:id="@+id/radioFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/checkBox"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="12dp"
            android:text="@string/rb_fast" />

        <RadioButton
            android:id="@+id/radioSlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:text="@string/rb_slow" />

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton2"
            android:layout_below="@+id/radioButton2"
            android:text="@string/rb_none" />

    </RadioGroup>
</RelativeLayout>
